--- a/src/main/resources/assets/featurehelper/lang/en_US.lang
+++ b/src/main/resources/assets/featurehelper/lang/en_US.lang
@@ -15,3 +15,8 @@ commands.structure.component.tagError=Data tag parsing failed: %s.
 commands.structure.bb.usage=/structure bb clear
 
 commands.cave.usage=/cave <start|continue>
+commands.cave.start.usage=/cave start <x> <y> <z> [yaw] [pitch] [radius] [length] [isRoom] [branches]
+commands.cave.start.success=§4TO BE CONTINUE!
+commands.cave.continue.usage=/cave continue
+commands.cave.continue.success=§4TO BE CONTINUE!
+commands.cave.continue.complete=§4TO BE CONTINUE!
