--- a/src/main/resources/assets/featurehelper/lang/en_US.lang
+++ b/src/main/resources/assets/featurehelper/lang/en_US.lang
@@ -13,6 +13,7 @@ commands.structure.component.invalidName=The name of structure component is inva
 commands.structure.component.invalidTag=Not a valid tag!
 commands.structure.component.tagError=Data tag parsing failed: %s.
 commands.structure.bb.usage=/structure bb clear
+commands.structure.bb.clear.success=Clear all bounding boxes.
 
 commands.cave.usage=/cave <start|continue>
 commands.cave.start.usage=/cave start <x> <y> <z> [yaw] [pitch] [radius] [length] [isRoom] [branches]
