优化特征工厂

--- a/src/main/resources/assets/featurehelper/lang/en_US.lang
+++ b/src/main/resources/assets/featurehelper/lang/en_US.lang
@@ -24,4 +24,4 @@ commands.cave.continue.complete=§4TO BE CONTINUE!
 
 commands.populate.usage=/populate <x> <y> <z> <featureName> [args...]
 commands.populate.invalidName=The name of feature is invalid!
-commands.populate.invalidArgs=Invalid args: %s.
+commands.populate.args=Args: %s.
