--- a/src/main/resources/assets/featurehelper/lang/en_US.lang
+++ b/src/main/resources/assets/featurehelper/lang/en_US.lang
@@ -27,4 +27,5 @@ commands.populate.success=Populate success.
 commands.populate.failed=Populate failed.
 commands.populate.invalidName=The name of feature is invalid!
 commands.populate.invalidArgs=Invalid args!
-commands.populate.args=Args: %s.
+commands.populate.invalidBlock=Invalid block!
+commands.populate.args=§2Args: %s.
