--- a/src/main/resources/assets/featurehelper/lang/en_US.lang
+++ b/src/main/resources/assets/featurehelper/lang/en_US.lang
@@ -16,7 +16,7 @@ commands.structure.component.empty=This structure component is empty!
 commands.structure.bb.usage=/structure bb clear
 commands.structure.bb.clear.success=Clear all bounding boxes.
 
-commands.cave.usage=/cave <start|continue>
+commands.cave.usage=/cave <start|continue|trail>
 commands.cave.start.usage=/cave start <x> <y> <z> <tunnel|room>
 commands.cave.start.tunnel.usage=/cave start <x> <y> <z> tunnel [yaw] [pitch] [radius] [length] [debug]
 commands.cave.start.room.usage=/cave start <x> <y> <z> room [radius]
@@ -27,7 +27,7 @@ commands.cave.continue.complete=No more caves can generate.
 commands.cave.trail.usage=/cave trail clear
 commands.cave.trail.clear.success=Clear all trails and stop generate.
 
-commands.cavehell.usage=/cavehell <start|continue>
+commands.cavehell.usage=/cavehell <start|continue|trail>
 commands.cavehell.start.usage=/cavehell start <x> <y> <z> <tunnel|room>
 commands.cavehell.start.tunnel.usage=/cavehell start <x> <y> <z> tunnel [yaw] [pitch] [radius] [length] [debug]
 commands.cavehell.start.room.usage=/cavehell start <x> <y> <z> room [radius]
@@ -37,6 +37,15 @@ commands.cavehell.continue.success=Continue to generate nether caves at (%f,%f,%
 commands.cavehell.continue.complete=No more nether caves can generate.
 commands.cavehell.trail.usage=/cavehell trail clear
 commands.cavehell.trail.clear.success=Clear all trails and stop generate.
+
+commands.ravine.usage=/ravine <start|continue|trail>
+commands.ravine.start.usage=/ravine start <x> <y> <z> tunnel [yaw] [pitch] [radius] [length] [debug]
+commands.ravine.start.success=Start ravines at (%f,%f,%f).
+commands.ravine.continue.usage=/ravine continue
+commands.ravine.continue.success=Continue to generate ravines at (%f,%f,%f).
+commands.ravine.continue.complete=No more ravines can generate.
+commands.ravine.trail.usage=/ravine trail clear
+commands.ravine.trail.clear.success=Clear all trails and stop generate.
 
 commands.populate.usage=/populate <x> <y> <z> <featureName> [args...]
 commands.populate.success=Populate success.
