碰撞盒跨纬度渲染问题 continue子命令维度判断 bb子命令改为碰撞盒显隐

--- a/src/main/resources/assets/featurehelper/lang/en_US.lang
+++ b/src/main/resources/assets/featurehelper/lang/en_US.lang
@@ -7,14 +7,17 @@ commands.structure.start.tagError=Data tag parsing failed: %s.
 commands.structure.continue.usage=/structure continue
 commands.structure.continue.success=Continue to generate structures.
 commands.structure.continue.complete=No more structures can generate.
+commands.structure.continue.failed=Incorrect dimension!
 commands.structure.component.usage=/structure component <x> <y> <z> <compName> [dataTag]
 commands.structure.component.success=Place structure component at (%d,%d,%d) to (%d,%d,%d).
 commands.structure.component.invalidName=The name of structure component is invalid!
 commands.structure.component.invalidTag=Not a valid tag!
 commands.structure.component.tagError=Data tag parsing failed: %s.
 commands.structure.component.empty=This structure component is empty!
-commands.structure.bb.usage=/structure bb clear
-commands.structure.bb.clear.success=Clear all bounding boxes.
+commands.structure.bb.usage=/structure bb <hide|show>
+commands.structure.bb.hide.success=Hide all bounding boxes.
+commands.structure.bb.show.success=Show all bounding boxes.
+commands.structure.bb.failed=Command sender is not a player!
 
 commands.cave.usage=/cave <start|continue|trail>
 commands.cave.start.usage=/cave start <x> <y> <z> <tunnel|room>
