洞穴路径多维度适配

--- a/src/main/resources/assets/featurehelper/lang/en_US.lang
+++ b/src/main/resources/assets/featurehelper/lang/en_US.lang
@@ -27,8 +27,11 @@ commands.cave.start.success=Start cave at (%f,%f,%f).
 commands.cave.continue.usage=/cave continue
 commands.cave.continue.success=Continue to generate caves at (%f,%f,%f).
 commands.cave.continue.complete=No more caves can generate.
-commands.cave.trail.usage=/cave trail clear
-commands.cave.trail.clear.success=Clear all trails and stop generate.
+commands.cave.continue.failed=Incorrect dimension!
+commands.cave.trail.usage=/cave trail <hide|show>
+commands.cave.trail.hide.success=Hide all cave trails.
+commands.cave.trail.show.success=Show all cave trails.
+commands.cave.trail.failed=Command sender is not a player!
 
 commands.cavehell.usage=/cavehell <start|continue|trail>
 commands.cavehell.start.usage=/cavehell start <x> <y> <z> <tunnel|room>
@@ -38,8 +41,11 @@ commands.cavehell.start.success=Start nether cave at (%f,%f,%f).
 commands.cavehell.continue.usage=/cavehell continue
 commands.cavehell.continue.success=Continue to generate nether caves at (%f,%f,%f).
 commands.cavehell.continue.complete=No more nether caves can generate.
-commands.cavehell.trail.usage=/cavehell trail clear
-commands.cavehell.trail.clear.success=Clear all trails and stop generate.
+commands.cavehell.continue.failed=Incorrect dimension!
+commands.cavehell.trail.usage=/cavehell trail <hide|show>
+commands.cavehell.trail.hide.success=Hide all nether cave trails.
+commands.cavehell.trail.show.success=Show all nether cave trails.
+commands.cavehell.trail.failed=Command sender is not a player!
 
 commands.ravine.usage=/ravine <start|continue|trail>
 commands.ravine.start.usage=/ravine start <x> <y> <z> tunnel [yaw] [pitch] [radius] [length] [debug]
@@ -47,8 +53,11 @@ commands.ravine.start.success=Start ravines at (%f,%f,%f).
 commands.ravine.continue.usage=/ravine continue
 commands.ravine.continue.success=Continue to generate ravines at (%f,%f,%f).
 commands.ravine.continue.complete=No more ravines can generate.
-commands.ravine.trail.usage=/ravine trail clear
-commands.ravine.trail.clear.success=Clear all trails and stop generate.
+commands.ravine.continue.failed=Incorrect dimension!
+commands.ravine.trail.usage=/ravine trail <hide|show>
+commands.ravine.trail.hide.success=Hide all ravine trails.
+commands.ravine.trail.show.success=Show all ravine trails.
+commands.ravine.trail.failed=Command sender is not a player!
 
 commands.populate.usage=/populate <x> <y> <z> <featureName> [args...]
 commands.populate.success=Populate success.
