ViStart不再返回空值(todo1.12-)

--- a/src/main/resources/assets/featurehelper/lang/en_us.json
+++ b/src/main/resources/assets/featurehelper/lang/en_us.json
@@ -1,12 +1,12 @@
 {
   "commands.structure.start.success": "Place structure start at (%d,%d,%d)",
-  "commands.structure.start.failed": "Place structure failed",
+  "commands.structure.start.failed": "Failed to place structure start here",
   "argument.structure.start.invalid": "Unknown structure start %s",
   "commands.structure.continue.success": "Continue to generate structures",
   "commands.structure.continue.complete": "No more structures can generate",
   "commands.structure.continue.failed": "Incorrect dimension",
-  "commands.structure.piece.success": "Place structure component at (%d,%d,%d) to (%d,%d,%d)",
-  "commands.structure.piece.empty": "This structure component is empty",
+  "commands.structure.piece.success": "Place structure piece at (%d,%d,%d) to (%d,%d,%d)",
+  "commands.structure.piece.failed": "Failed to place structure piece here",
   "argument.structure.piece.invalid": "Unknown structure piece %s",
   "commands.structure.bb.hide.success": "Hide all bounding boxes",
   "commands.structure.bb.show.success": "Show all bounding boxes",
