--- a/src/main/resources/assets/featurehelper/lang/en_us.json
+++ b/src/main/resources/assets/featurehelper/lang/en_us.json
@@ -11,45 +11,12 @@
   "commands.structure.bb.hide.success": "Hide all bounding boxes",
   "commands.structure.bb.show.success": "Show all bounding boxes",
 
-  "commands.cave.usage": "/cave <start|continue|trail>",
-  "commands.cave.start.usage": "/cave start <x> <y> <z> <tunnel|room>",
-  "commands.cave.start.tunnel.usage": "/cave start <x> <y> <z> tunnel [yaw] [pitch] [radius] [length] [debug]",
-  "commands.cave.start.room.usage": "/cave start <x> <y> <z> room [radius]",
-  "commands.cave.start.success": "Start cave at (%f,%f,%f).",
-  "commands.cave.continue.usage": "/cave continue",
-  "commands.cave.continue.success": "Continue to generate caves at (%f,%f,%f).",
-  "commands.cave.continue.complete": "No more caves can generate.",
-  "commands.cave.continue.failed": "Incorrect dimension!",
-  "commands.cave.trail.usage": "/cave trail <hide|show>",
-  "commands.cave.trail.hide.success": "Hide all cave trails.",
-  "commands.cave.trail.show.success": "Show all cave trails.",
-  "commands.cave.trail.failed": "Command sender is not a player!",
-
-  "commands.cavehell.usage": "/cavehell <start|continue|trail>",
-  "commands.cavehell.start.usage": "/cavehell start <x> <y> <z> <tunnel|room>",
-  "commands.cavehell.start.tunnel.usage": "/cavehell start <x> <y> <z> tunnel [yaw] [pitch] [radius] [length] [debug]",
-  "commands.cavehell.start.room.usage": "/cavehell start <x> <y> <z> room [radius]",
-  "commands.cavehell.start.success": "Start nether cave at (%f,%f,%f).",
-  "commands.cavehell.continue.usage": "/cavehell continue",
-  "commands.cavehell.continue.success": "Continue to generate nether caves at (%f,%f,%f).",
-  "commands.cavehell.continue.complete": "No more nether caves can generate.",
-  "commands.cavehell.continue.failed": "Incorrect dimension!",
-  "commands.cavehell.trail.usage": "/cavehell trail <hide|show>",
-  "commands.cavehell.trail.hide.success": "Hide all nether cave trails.",
-  "commands.cavehell.trail.show.success": "Show all nether cave trails.",
-  "commands.cavehell.trail.failed": "Command sender is not a player!",
-
-  "commands.ravine.usage": "/ravine <start|continue|trail>",
-  "commands.ravine.start.usage": "/ravine start <x> <y> <z> tunnel [yaw] [pitch] [radius] [length] [debug]",
-  "commands.ravine.start.success": "Start ravines at (%f,%f,%f).",
-  "commands.ravine.continue.usage": "/ravine continue",
-  "commands.ravine.continue.success": "Continue to generate ravines at (%f,%f,%f).",
-  "commands.ravine.continue.complete": "No more ravines can generate.",
-  "commands.ravine.continue.failed": "Incorrect dimension!",
-  "commands.ravine.trail.usage": "/ravine trail <hide|show>",
-  "commands.ravine.trail.hide.success": "Hide all ravine trails.",
-  "commands.ravine.trail.show.success": "Show all ravine trails.",
-  "commands.ravine.trail.failed": "Command sender is not a player!",
+  "commands.carve.start.success": "Start carve at (%f,%f,%f)",
+  "commands.carve.continue.success": "Continue to carve at (%f,%f,%f)",
+  "commands.carve.continue.complete": "Cannot carve anymore",
+  "commands.carve.continue.failed": "Incorrect dimension",
+  "commands.carve.trail.hide.success": "Hide all trails",
+  "commands.carve.trail.show.success": "Show all trails",
 
   "commands.feature.success": "Place feature success",
   "commands.feature.failed": "Failed to place feature here",
